CMAKE_MINIMUM_REQUIRED ( VERSION 3.11 )
project(
    yugioh_core
    VERSION 0.1
    LANGUAGES CXX
)

SET ( CMAKE_BUILD_TYPE Debug )
SET ( CMAKE_VERBOSE_MAKEFILE true )

SET ( OUTPUT_ELF
        "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.lib"
)
SET ( SRC_FILES
    src/Game.cpp
    src/MessageSystem.cpp
)

SET ( CMAKE_C_COMPILER "g++" )

INCLUDE_DIRECTORIES ( include /include )

ADD_COMPILE_OPTIONS( -g -Wall -std=c++20 )

SET ( CMAKE_C_FLAGS_DEBUG "-DDEBUG -DC_FLAGS" )
SET ( CMAKE_EXE_LINKER_FLAGS_DEBUG "-DDEBUG -DLINKER_FLAGS" )
 
SET ( CMAKE_C_FLAGS_RELEASE "-DRELEASE -DC_FLAGS" ) 
SET ( CMAKE_EXE_LINKER_FLAGS_RELEASE "-DRELEASE -DLINKER_FLAGS" )
 
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE}/bin )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE}/lib )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE}/lib )

add_library(${OUTPUT_ELF} STATIC ${SRC_FILES})